Fixed text alignement

--- a/_assets/css/styles.css
+++ b/_assets/css/styles.css
@@ -551,6 +551,7 @@ h1 {
     -o-border-radius: 3px;
     border-radius: 3px;
     padding: 10px 20px 10px 10px;
+    text-align: left;
 }
 
 .prev-post>a.title:hover,
